# R-Type

./: .clang-format  .clang-tidy  .gitignore  ARCHITECTURE_ECS.md  Animation_8cpp.html  Animation_8cpp__incl.dot  Animation_8hpp.html  Animation_8hpp.js  Animation_8hpp__dep__incl.dot  Animation_8hpp__incl.dot  Animation_8hpp_source.html  BackgroundSystem_8cpp.html  BackgroundSystem_8cpp__incl.dot  BackgroundSystem_8hpp.html  BackgroundSystem_8hpp.js  BackgroundSystem_8hpp__dep__incl.dot  BackgroundSystem_8hpp__incl.dot  BackgroundSystem_8hpp_source.html  Background_8cpp.html  Background_8cpp__incl.dot  Background_8hpp.html  Background_8hpp.js  Background_8hpp__dep__incl.dot  Background_8hpp__incl.dot  Background_8hpp_source.html  CMakeLists.txt  CollisionSystem_8cpp.html  CollisionSystem_8cpp__incl.dot  CollisionSystem_8hpp.html  CollisionSystem_8hpp.js  CollisionSystem_8hpp__dep__incl.dot  CollisionSystem_8hpp__incl.dot  CollisionSystem_8hpp_source.html  Collision_8cpp.html  Collision_8cpp__incl.dot  Collision_8hpp.html  Collision_8hpp.js  Collision_8hpp__dep__incl.dot  Collision_8hpp__incl.dot  Collision_8hpp_source.html  (+755 more)
GameEngine/: CMakeLists.txt  EcsManager.cpp  EcsManager.hpp  Entity.cpp  Entity.hpp  Game.cpp  main.cpp
GameEngine/Components/: Collider.hpp  Component.hpp  Health.cpp  Health.hpp  InputPlayer.cpp  InputPlayer.hpp  Position.cpp  Position.hpp  Sound.hpp  Sprite.cpp  Sprite.hpp
GameEngine/Systems/: CollisionSystem.cpp  CollisionSystem.hpp  InputSystem.cpp  InputSystem.hpp  MovementSystem.cpp  MovementSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  System.hpp
GameEngine/tests/: CMakeLists.txt
client/src/: CMakeLists.txt  main.cpp
client/src/client/: Client.cpp  Client.hpp
client/src/game/: Game.cpp  Game.hpp
client/src/game_renderer/: GameRenderer.cpp  GameRenderer.hpp
client/src/input_manager/: InputManager.cpp  InputManager.hpp
client/src/parser/: Parser.cpp  Parser.hpp
client/tests/: CMakeLists.txt  TestClient.cpp
common/: CMakeLists.txt
common/packet_data/: PacketData.cpp  PacketData.hpp
common/shared_data/: SharedData.cpp  SharedData.hpp
common/src/: CMakeLists.txt  Constants.hpp
common/src/bit_packer/: BitPacker.cpp  BitPacker.hpp
common/src/bit_unpacker/: BitUnpacker.cpp  BitUnpacker.hpp
common/src/client_network_state/: ClientNetworkState.hpp
common/src/constants/: BitPackingConstants.hpp  GameConstants.hpp  NetworkConstants.hpp  ProtocolConstants.hpp
common/src/custom_packet/: CustomPacket.cpp  CustomPacket.hpp
common/src/data_translator/: DataTranslator.cpp  DataTranslator.hpp
common/src/entity_factory/: EntityFactory.cpp  EntityFactory.hpp
common/src/enums/: EntityType.hpp  Key.hpp  KeyState.hpp  LobbyState.hpp  LobbyType.hpp
common/src/packet_data/: AcknowledgeData.hpp  DeleteEntityData.hpp  InputData.hpp  InputPacket.cpp  InputPacket.hpp  NewEntityData.hpp  PacketData.cpp  PacketData.hpp  PositionData.hpp  SoundData.hpp  TextData.hpp  TextPacket.hpp
common/src/packet_disassembler/: PacketDisassembler.cpp  PacketDisassembler.hpp
common/src/packet_factory/: PacketFactory.cpp  PacketFactory.hpp
common/src/packet_handler/: PacketHandler.cpp  PacketHandler.hpp
common/src/packet_header/: PacketHeader.hpp
common/src/parser/: AParser.cpp  AParser.hpp
common/src/reliable_packet/: ReliablePacket.hpp
common/src/shared_data/: SharedData.cpp  SharedData.hpp
common/test/: CMakeLists.txt  TestBitPacking.cpp  TestDataTranslator.cpp  TestPackedData.cpp  TestPacketDisassembler.cpp  TestPacketFactory.cpp  TestSharedData.cpp
ecs/: CMakeLists.txt  EcsManager.cpp  EcsManager.hpp  Entity.hpp
ecs/components/: Collider.cpp  Collider.hpp  Collision.cpp  Collision.hpp  Component.cpp  Component.hpp  Destroy.cpp  Enemy.cpp  Enemy.hpp  Health.cpp  Health.hpp  InputPlayer.cpp  InputPlayer.hpp  Position.cpp  Position.hpp  Shoot.cpp  Shoot.hpp  Sound.cpp  Sound.hpp  Sprite.cpp  Sprite.hpp  Velocity.cpp  Velocity.hpp
ecs/src/: CMakeLists.txt  EcsConstant.hpp  EcsManager.cpp  EcsManager.hpp  Entity.cpp  Entity.hpp  ResourceManager.cpp  ResourceManager.hpp  SoundManager.cpp  SoundManager.hpp
ecs/src/components/: Animation.cpp  Animation.hpp  Background.cpp  Background.hpp  Collision.hpp  ComponentArray.hpp  ComponentTypes.hpp  Destroy.hpp  Enemy.hpp  Health.cpp  Health.hpp  IComponentArray.hpp  InputPlayer.cpp  InputPlayer.hpp  PlayerAnimation.cpp  PlayerAnimation.hpp  Position.cpp  Position.hpp  Score.cpp  Score.hpp  Shoot.cpp  Shoot.hpp  Sound.cpp  Sound.hpp  Sprite.cpp  Sprite.hpp  Text.cpp  Text.hpp  Velocity.cpp  Velocity.hpp
ecs/src/managers/: ComponentManager.cpp  ComponentManager.hpp  EcsManager.cpp  EcsManager.hpp  EntityManager.cpp  EntityManager.hpp  IObserver.hpp  SystemManager.cpp  SystemManager.hpp
ecs/src/systems/: BackgroundSystem.cpp  BackgroundSystem.hpp  CollisionSystem.cpp  CollisionSystem.hpp  DestroySystem.cpp  DestroySystem.hpp  HealthSystem.cpp  HealthSystem.hpp  InputSystem.cpp  InputSystem.hpp  MovementSystem.cpp  MovementSystem.hpp  PlayerAnimationSystem.cpp  PlayerAnimationSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  ScoreTextSystem.cpp  ScoreTextSystem.hpp  ShootSystem.cpp  ShootSystem.hpp  SoundSystem.cpp  SoundSystem.hpp  SpriteAnimationSystem.cpp  SpriteAnimationSystem.hpp  System.hpp  VelocitySystem.cpp  VelocitySystem.hpp
ecs/systems/: CollisionSystem.cpp  CollisionSystem.hpp  DestroySystem.cpp  InputSystem.cpp  InputSystem.hpp  MovementSystem.cpp  MovementSystem.hpp  PlayerAnimationSystem.cpp  RenderSystem.cpp  RenderSystem.hpp  ShootSystem.cpp  ShootSystem.hpp  System.cpp  System.hpp  VelocitySystem.cpp  VelocitySystem.hpp
ecs/tests/: CMakeLists.txt  TestsAnimation.cpp  TestsCollision.cpp  TestsEcsManager.cpp  TestsHealth.cpp  TestsInputPlayer.cpp  TestsPosition.cpp  TestsSprite.cpp  TestsVelocity.cpp
server/: CMakeLists.txt
server/src/: CMakeLists.txt  main.cpp
server/src/factory/: Player.cpp  (+11 more)
server/test/: CMakeLists.txt  TestLevelManager.cpp  TestParser.cpp  TestServer.cpp
server/tests/: CMakeLists.txt  TestLevelManager.cpp  TestLevelParser.cpp  TestServer.cpp
(+390 files in other folders)
