add_library(r-type_common_lib
        shared_data/SharedData.cpp
        shared_data/SharedData.hpp
        packet_data/input_packet/InputPacket.hpp
        enums/Key.hpp
        enums/KeyState.hpp
        custom_packet/CustomPacket.cpp
        custom_packet/CustomPacket.hpp
        parser/AParser.cpp
        parser/AParser.hpp
        packet_data/PacketData.hpp
        packet_data/PacketData.cpp
        shared_data/SharedData.cpp
        shared_data/SharedData.hpp
        packet_data/input_packet/InputPacket.hpp
        packet_data/input_packet/InputPacket.cpp
        packet_data/position_packet/PositionPacket.cpp
        packet_data/position_packet/PositionPacket.hpp
        packet_data/new_entity_packet/NewEntityPacket.cpp
        packet_data/new_entity_packet/NewEntityPacket.hpp
        packet_data/delete_entity_packet/DeleteEntityPacket.cpp
        packet_data/delete_entity_packet/DeleteEntityPacket.hpp
        enums/EntityType.hpp
        data_translator/DataTranslator.cpp
        data_translator/DataTranslator.hpp
        Constants.hpp
        packet_factory/PacketFactory.cpp
        packet_factory/PacketFactory.hpp
)

target_include_directories(r-type_common_lib PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}
)

target_link_libraries(r-type_common_lib
        PUBLIC
        sfml-network
        r-type_ecs_lib
)
