add_library(r-type_common_lib
        shared_data/SharedData.cpp
        shared_data/SharedData.hpp
        packet_data/input_data/InputData.hpp
        enums/Key.hpp
        enums/KeyState.hpp
        custom_packet/CustomPacket.cpp
        custom_packet/CustomPacket.hpp
        parser/AParser.cpp
        parser/AParser.hpp
        packet_data/PacketData.hpp
        shared_data/SharedData.cpp
        shared_data/SharedData.hpp
        packet_data/input_data/InputData.hpp
        packet_data/position_data/PositionData.hpp
        packet_data/new_entity_data/NewEntityData.hpp
        packet_data/delete_entity_data/DeleteEntityData.hpp
        enums/EntityType.hpp
        data_translator/DataTranslator.cpp
        data_translator/DataTranslator.hpp
        constants/GameConstants.hpp
        packet_factory/PacketFactory.cpp
        packet_factory/PacketFactory.hpp
        packet_data/connection_data/ConnectionData.hpp
        packet_data/start_game_data/StartGameData.hpp
        bit_packer/BitPacker.cpp
        bit_packer/BitPacker.hpp
        constants/ProtocolConstants.hpp
        constants/BitPackingConstants.hpp
        bit_unpacker/BitUnpacker.cpp
        bit_unpacker/BitUnpacker.hpp
        packet_disassembler/PacketDisassembler.cpp
        packet_disassembler/PacketDisassembler.hpp
        entity_factory/EntityFactory.cpp
        entity_factory/EntityFactory.hpp
)

target_include_directories(r-type_common_lib PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}
        ${LZ4_SOURCE_DIR}/lib
)

target_link_libraries(r-type_common_lib
        PUBLIC
        sfml-network
        r-type_ecs_lib
        lz4_static
)
