add_library(r-type_common_lib
        shared_data/SharedData.cpp
        shared_data/SharedData.hpp
        packet_data/InputData.hpp
        enums/Key.hpp
        custom_packet/CustomPacket.cpp
        custom_packet/CustomPacket.hpp
        parser/AParser.cpp
        parser/AParser.hpp
        packet_data/PacketData.hpp
        shared_data/SharedData.cpp
        shared_data/SharedData.hpp
        packet_data/InputData.hpp
        packet_data/PositionData.hpp
        packet_data/NewEntityData.hpp
        packet_data/DeleteEntityData.hpp
        enums/EntityType.hpp
        data_translator/DataTranslator.cpp
        data_translator/DataTranslator.hpp
        constants/GameConstants.hpp
        packet_factory/PacketFactory.cpp
        packet_factory/PacketFactory.hpp
        packet_data/ConnectionData.hpp
        packet_data/StartGameData.hpp
        bit_packer/BitPacker.cpp
        bit_packer/BitPacker.hpp
        constants/NetworkConstants.hpp
        constants/BitPackingConstants.hpp
        bit_unpacker/BitUnpacker.cpp
        bit_unpacker/BitUnpacker.hpp
        packet_disassembler/PacketDisassembler.cpp
        packet_disassembler/PacketDisassembler.hpp
        packet_header/PacketHeader.hpp
        packet_data/AcknowledgeData.hpp
        packet_data/SoundData.hpp
        reliable_packet/ReliablePacket.hpp
        entity_factory/EntityFactory.cpp
        entity_factory/EntityFactory.hpp
        entity_factory/EntityFactory.cpp
)

target_include_directories(r-type_common_lib PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}
        ${LZ4_SOURCE_DIR}/lib
)

target_link_libraries(r-type_common_lib
        PUBLIC
        sfml-network
        r-type_ecs_lib
        lz4_static
)
