add_library(r-type_ecs_lib
        systems/system/ISystem.hpp
        systems/system/ASystem.hpp
        systems/render/RenderSystem.cpp
        systems/render/RenderSystem.hpp
        systems/movement/MovementSystem.cpp
        systems/movement/MovementSystem.hpp
        systems/input/InputSystem.cpp
        systems/input/InputSystem.hpp
        systems/collision/CollisionSystem.cpp
        systems/collision/CollisionSystem.hpp
        components/sound/Sound.cpp
        components/sound/Sound.hpp
        components/collision/Collision.cpp
        components/collision/Collision.hpp
        components/inputPlayer/InputPlayer.cpp
        components/inputPlayer/InputPlayer.hpp
        components/health/Health.cpp
        components/health/Health.hpp
        components/position/Position.cpp
        components/position/Position.hpp
        components/component/Component.cpp
        components/component/Component.hpp
        managers/EcsManager.cpp
        managers/EcsManager.hpp
        managers/ResourceManager.cpp
        managers/ResourceManager.hpp
        components/sprite/Sprite.cpp
        components/sprite/Sprite.hpp
        components/enemy/Enemy.cpp
        components/enemy/Enemy.hpp
        systems/shoot/ShootSystem.cpp
        systems/shoot/ShootSystem.hpp
        components/destroy/Destroy.cpp
        components/destroy/Destroy.hpp
        components/shoot/Shoot.cpp
        components/shoot/Shoot.hpp
        components/animation/Animation.cpp
        components/animation/Animation.hpp
        components/velocity/Velocity.hpp
        components/velocity/Velocity.cpp
        systems/destroy/DestroySystem.cpp
        systems/destroy/DestroySystem.hpp
        systems/playerAnimation/PlayerAnimationSystem.hpp
        systems/playerAnimation/PlayerAnimationSystem.cpp
        systems/spriteAnimation/SpriteAnimationSystem.cpp
        systems/spriteAnimation/SpriteAnimationSystem.hpp
        systems/velocity/VelocitySystem.hpp
        systems/velocity/VelocitySystem.cpp
        systems/health/HealthSystem.cpp
        systems/health/HealthSystem.hpp
        components/playerAnimation/PlayerAnimation.cpp
        components/playerAnimation/PlayerAnimation.hpp
        components/background/Background.hpp
        components/background/Background.cpp
        systems/background/BackgroundSystem.hpp
        systems/background/BackgroundSystem.cpp
        managers/EntityManager.cpp
        managers/EntityManager.hpp
        managers/ComponentManager.cpp
        managers/ComponentManager.hpp
        managers/SystemManager.cpp
        managers/SystemManager.hpp
        managers/IObserver.hpp
        components/IComponentArray.hpp
        components/ComponentArray.cpp
        components/ComponentArray.hpp
        components/ComponentTypes.hpp
)

target_include_directories(r-type_ecs_lib PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}
        ../../common
)

target_link_libraries(r-type_ecs_lib PUBLIC sfml-graphics sfml-window sfml-system sfml-audio)
target_link_libraries(r-type_server PRIVATE r-type_ecs_lib)